# bts-light

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NOTICE.md  README.md  index.html  package-lock.json  package.json
.claude/skills/grill-me/: SKILL.md  (+1 more)
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
.github/workflows/: ci.yml  relay-deploy.yml  release.yml
data/name-lists/: namen_lexicon_en-IN.xml  namen_lexicon_es-ES.xml  namen_lexicon_fr-FR.xml  namen_lexicon_ms-MY.xml  namen_lexicon_pl-PL.xml  namen_lexicon_tr-TR.xml
docs/: announcements.md  btp-write-vergleich-letilo.md  btp_protocol.md  changelog.md  cloud-relay.md  court-monitor.md  logging.md  multi-hall.md  pi-dual-image.md  pi-master-image.md  pi-setup.md  preparation.md  regression-suite.md  release.md  roadmap-plaene-2026-07.md  roadmap.md  spec-pipeline-konzept.md  spieler-check-in.md  tablet-kiosk.md  tablet.md  tts-azure-concept.md  turnier-log-review-2026-07.md  umpire-mode.md  walkover.md  zaehltafelbediener.md
docs/adr/: 0001-quality-gate-und-branch-protection.md  0002-ferne-halle-direkt-cloud-geraete.md  0003-azure-tts-vererbung-relay.md  0004-telefon-kopplungscode.md  0005-lan-https-selbstsigniert.md  0006-master-identitaet-umziehen.md  0007-zaehltafelbediener.md  0008-auto-aussprache-serverseitig-badhub.md  0009-hallen-checkin-persistenz-und-identitaet.md  README.md  template.md
docs/features/: multihall-cloud-plan.md  name-pronunciation-plan.md  spieler-check-in.md
ops/: bts-relay.service  nginx-bts-relay.conf
pi/: build-master-image.sh  setup-monitor.sh  shared-startbrowser.sh
relay/: Cargo.toml
relay-proto/: Cargo.toml
relay-proto/src/: lib.rs
relay/src/: main.rs
scripts/: azure-spike.mjs  build-release-page.mjs  gen-name-lang-base.mjs  test-discipline-voice.mjs  test-gamepoint.mjs  test-gong-timing.mjs  test-name-correction.mjs  test-serving.mjs
src/: App.tsx  api.ts  embedSnippet.ts  index.css  presets.ts  tournamentGuid.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: ad.html  combo.html  lobby.html  monitor.html  overview.html  preparation.html  tablet.html  tv.html  winners.html
src-tauri/capabilities/: default.json
src-tauri/installer/: firewall-hooks.nsh
src-tauri/src/: azure_tts.rs  commands.rs  config.rs  lib.rs  log_upload.rs  main.rs  sync.rs
src-tauri/src/badhub/: diff.rs  mod.rs  payload.rs  push.rs
src-tauri/src/btp/: client.rs  mod.rs  model.rs  proto.rs  wire.rs  xml.rs
src-tauri/src/tablet/: assets.rs  club_logos.rs  mdns.rs  mod.rs  monitor.rs  relay_client.rs  server.rs  slave_bridge.rs  state.rs  winners.rs
src-tauri/tests/: btp_capture.rs
src/components/: AlertBanner.tsx  AnnounceSettings.tsx  AppShell.tsx  AzureFallbackBanner.tsx  CallTimerBadge.tsx  CloudAnnounceSlave.tsx  CopyBadgeButton.tsx  EmbedCodeCard.tsx  Footer.tsx  FreetextAnnouncer.tsx  HallFilter.tsx  MatchAnnouncer.tsx  MonitorPreview.tsx  SideNav.tsx  SlaveConnectBanner.tsx  SlaveDevicesPanel.tsx  UpdateBanner.tsx  WalkoverPanel.tsx
src/io/: announceCourt.ts  announcer.ts  azureAnnounce.ts  disciplineVoice.d.mts  disciplineVoice.mjs  gamePoint.d.mts  gamePoint.mjs  gongTiming.d.mts  gongTiming.mjs  nameCorrection.d.mts  nameCorrection.mjs  nameLangBase.ts  nameOverrideBase.ts  nameOverrideSeed.ts  transliterate.ts
src/pages/: AnnouncePage.tsx  CourtMonitorPanel.tsx  Dashboard.tsx  FieldOverviewPage.tsx  MaintenancePage.tsx  PreparationPanel.tsx  SetupWizard.tsx  TabletPanel.tsx  WinnersPage.tsx
src/state/: announceHistory.ts  azureStatus.ts  callTimer.ts  preparedGames.ts  useAvailableVoices.ts
tools/: capture-btp.ps1
(+3 files in other folders)
