[package]
name = "relay-proto"
version = "0.1.0"
description = "Geteilte JSON-Wire-Typen zwischen bts-light und dem Cloud-Relay"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
# Für state_sync_match_id (Stale-Filter): beide Seiten (App + Relay)
# nutzen serde_json ohnehin — keine neue Abhängigkeit im Workspace.
serde_json = "1"
