[package]
name = "bts-light"
version = "0.3.1"
description = "Plug-and-play liveticker bridge between BTP (Tournament Planner) and badhub.de"
authors = ["Badhub"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bts_light_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1.1.9"
thiserror = "2.0.18"
tracing = "0.1.44"
quick-xml = "0.40.1"
tokio = { version = "1.52.3", features = ["net", "io-util", "time", "rt", "macros"] }
reqwest = { version = "0.13.3", default-features = false, features = ["rustls", "charset"] }
axum = { version = "0.8.9", features = ["ws"] }
local-ip-address = "0.6.13"
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }
tracing-subscriber = "0.3.23"
tracing-appender = "0.2.5"

[dev-dependencies]
tempfile = "3.27.0"

